# fidder

./: .gitignore  README.md  setup.cfg  setup.py
fidder/: dataset.py  fill_mask.py  predict.py  train.py  validate.py
fidder/unet/: model.py  train.py  validate.py
fidder/unet/utils/: dice_score.py
